syntax = "proto3";
package sifnode.clp.v1;

import "gogoproto/gogo.proto";
import "sifnode/clp/v1/types.proto";

option go_package = "github.com/sifchain/sifnode/x/clp/types";

service Msg {
  rpc RemoveLiquidity(MsgRemoveLiquidity) returns (MsgRemoveLiquidityResponse);
  rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
  rpc AddLiquidity(MsgAddLiquidity) returns (MsgAddLiquidityResponse);
  rpc Swap(MsgSwap) returns (MsgSwapResponse);
}

message MsgRemoveLiquidity {
  string               signer         = 1 [(gogoproto.moretags) = "yaml:\"signer\""];
  sifnode.clp.v1.Asset external_asset = 2 [(gogoproto.moretags) = "yaml:\"external_asset\""];
  string               w_basis_points = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"w_basis_points\""
  ];
  string asymmetry = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"asymmetry\""
  ];
}

message MsgRemoveLiquidityResponse {}

message MsgCreatePool {
  string               signer              = 1 [(gogoproto.moretags) = "yaml:\"signer\""];
  sifnode.clp.v1.Asset external_asset      = 2 [(gogoproto.moretags) = "yaml:\"external_asset\""];
  string               native_asset_amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"native_asset_amount\""
  ];
  string external_asset_amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"external_asset_amount\""
  ];
}

message MsgCreatePoolResponse {}

message MsgAddLiquidity {
  string               signer              = 1 [(gogoproto.moretags) = "yaml:\"signer\""];
  sifnode.clp.v1.Asset external_asset      = 2 [(gogoproto.moretags) = "yaml:\"external_asset\""];
  string               native_asset_amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"native_asset_amount\""
  ];
  string external_asset_amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"external_asset_amount\""
  ];
}

message MsgAddLiquidityResponse {}

message MsgSwap {
  string               signer         = 1 [(gogoproto.moretags) = "yaml:\"signer\""];
  sifnode.clp.v1.Asset sent_asset     = 2 [(gogoproto.moretags) = "yaml:\"sent_asset\""];
  sifnode.clp.v1.Asset received_asset = 3 [(gogoproto.moretags) = "yaml:\"received_asset\""];
  string               sent_amount    = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"sent_amount\""
  ];
  string min_receiving_amount = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"min_receiving_amount\""
  ];
}

message MsgSwapResponse {}

message MsgDecommissionPool {
  string signer = 1 [(gogoproto.moretags) = "yaml:\"signer\""];
  string symbol = 2 [(gogoproto.moretags) = "yaml:\"symbol\""];
}

message MsgDecommissionPoolResponse {}
